--- a/index.html
+++ b/index.html
@@ -4,31 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style2.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Allura&display=swap" rel="stylesheet">
+    <title>Join the force</title>
 </head>
 <body>
     <div class="first-page">
-        <div class="menu">Elegancy.</div>
-        <nav>
-            <a href="#">About</a>
-            <a href="#">Projects</a>
-            <a href="#">Services</a>
-            <a href="#">News</a>
-            <a href="#">Connect</a>
-        </nav>
-        
+        <div class="first-page-header">
+                <div class="company-name">Elegancy.</div>
+                <nav>
+                    <a href="#">About</a>
+                    <a href="#">Projects</a>
+                    <a href="#">Services</a>
+                    <a href="#">News</a>
+                    <a href="#">Connect</a>
+                </nav>
+                <div class="social-nets">
+                    <a href="#" class="imageforlink">f</a>
+                    <a href="#" class="imageforlink"><img src="images/Twitter.png"></a>
+                    <a href="#" class="imageforlink">g</a>
+                </div>
+        </div>
         <div class="main-page">
             <h1>Join the force</h1>
-            <h3>join our newletter & receive free updates</h3>
+            <h2>join our newletter & receive free updates</h2>
             <form class="email">
                 <input type="text" placeholder="Your name">
                 <input type="email" placeholder="contact@pixelhint.com">
-                <input type="submit" value="Subscribe">
+                <input class="subscribe-button" type="submit" value="Subscribe">
             </form>
         </div>
     </div>
-    
+    <div class="second-page">
+        <div class="mobile-friendly">
+            <img src="images/mobile friendly.png">
+            <h3>Mobile friendly</h3>
+            <p>Excepteur sinto occaecat cupidatat non proident, sunt in culpa qui nam sint essent official mollit</p>
+        </div>
+        <div class="retina-ready">
+            <img src="images/retina ready.png">
+            <h3>Retina ready</h3>
+            <p>Excepteur sinto occaecat cupidatat non proident, sunt in culpa qui nam sint essent official mollit</p>
+        </div>
+        <div class="well-documented">
+            <img src="images/well documented.png">
+            <h3>Well documented</h3>
+            <p>Excepteur sinto occaecat cupidatat non proident, sunt in culpa qui nam sint essent official mollit</p>
+        </div>
+    </div>
 </body>
 </html>
+
